[FIX] knowledge: embedded view menu overlap
Before this commit:
Status icons in the embedded view were overlapping with the menu.

After this commit:
The issue has been resolved, and now the menu is displayed correctly over
the icons.

Task-3717057

closes odoo/enterprise#58942

X-original-commit: 1cb21f8c74678ff9681b6d0f9e00eb54bf70bb13

--- a/knowledge/static/src/scss/knowledge_views.scss
+++ b/knowledge/static/src/scss/knowledge_views.scss
@@ -34,8 +34,11 @@
     .o_knowledge_behavior_type_embedded_view .o_list_renderer thead {
         position: relative;
         z-index: auto;
-    }
 
+        .position-sticky {
+            position: unset !important;
+        }
+    }
     .o_breadcrumb_article_name > input:not(.o_readonly_modifier):hover {
         border-bottom: $input-border-width solid $o-brand-primary;
     }
